3.0.0 will now target Java 8